--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="./css/tailwind.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@1,900&display=swap" rel="stylesheet">
+  <title>curatedby[xyz]</title>
 
     <script type="text/javascript">
       var _paq = window._paq = window._paq || [];
