fix css collision

--- a/heimy/index.html
+++ b/heimy/index.html
@@ -276,7 +276,8 @@
     <div class="s-tall-hide">
 
       <div class="guide-cover-landscape">
-        <div class="flex grid--gutter" data-hide-map-labels="">
+
+        <div class="flex curate-grid--gutter" data-hide-map-labels="">
 
           <div class="s-col-6 xl-col-12 pad-bottom pad-top">
             <div class="flex rounded-xl h-full w-full bg-gradient-to-br via-purple-800 to-blue-400 from-blue-500 place-content-start">
@@ -303,8 +304,7 @@
             </div>
         </div>
         </div>
-
-          <div class="flex grid--gutter" data-hide-map-labels="">
+          <div class="flex curate-grid--gutter" data-hide-map-labels="">
 
           <div class="s-col-6 xl-col-8 pad-bottom">
             <div class="guide-cover-landscape__bounds map-cover-bounds"></div>
@@ -341,7 +341,7 @@
             </div>
           </div>
         </div>
-        <div class="guide-cover-landscape__contents grid grid--gutter pad-bottom" data-show-map-labels="">
+        <div class="guide-cover-landscape__contents curate-grid curate-grid--gutter pad-bottom" data-show-map-labels="">
           <div class="guide-cover-landscape__legend s-col-6 xl-col-4 sticky-center" style="top: 48.5px;">
               <input class="search-input" type="search" id="search-input" placeholder="Loading..." />
           </div>
@@ -349,7 +349,7 @@
       </div>
     </div>
     <div class="s-wide-hide">
-      <div class="grid grid--gutter">
+      <div class="curate-grid curate-grid--gutter">
         <div class="s-col-12 guide-cover-portrait">
           <div class="guide-cover-portrait__cover map-bounds-cover-portrait" data-hide-map-labels="">
             <div class="guide-cover-portrait__image rounded">
@@ -391,7 +391,7 @@
       <div class="spots__inner">
 
 
-        <div id="id1" class="spot grid grid--gutter pad-bottom lazy spot--loaded" data-loaded-class="spot--loaded">
+        <div id="id1" class="spot curate-grid curate-grid--gutter pad-bottom lazy spot--loaded" data-loaded-class="spot--loaded">
           <div class="spot__images">
             <!-- <div class="spot__images" style="height: 172px;"> -->
             <div class="s-col-12 spot__slider-container">
@@ -464,7 +464,7 @@
 
           <div class="s-col-10 m-col-6 xl-col-4" style="margin-top: -12px;">
             <div class="spot__text">
-              <div class="grid grid--gutter">
+              <div class="curate-grid curate-grid--gutter">
                 <div class="s-col-12 pad-top  pad-bottom">
                 </div>
                 <div class="spot__tip s-col-12">
@@ -486,7 +486,7 @@
 
   <div class="search">
     <div class="search__inner">
-      <div class="grid grid--gutter pad-bottom search__input-container">
+      <div class="curate-grid curate-grid--gutter pad-bottom search__input-container">
         <div class="s-col-12 search__input">
           <input type="text" name="search" placeholder="Where to?">
           <div class="search__busy"></div>
