--- a/heimy/index.html
+++ b/heimy/index.html
@@ -124,7 +124,8 @@
 
   <div class="guide" style="--guide-color: #3399ff; --dot-gradient: radial-gradient( circle at center, rgba(51, 153, 255, 1 ) 40%, rgba(51, 153, 255, 0 ) 70% )">
 
-    <div class="map" data-api-key="AIzaSyDK4JBJtkBHkWb6ahrNXmciUrsZXwklvPc">
+    <!-- <div class="map" data-api-key="AIzaSyDK4JBJtkBHkWb6ahrNXmciUrsZXwklvPc"> -->
+    <div class="map" data-api-key="AIzaSyC0QRlrSkmN3d8CpS4MZ2NQ88jDthu_1Bs">
       <div class="map__map" style="position: relative; overflow: hidden;">
         <div style="height: 100%; width: 100%; position: absolute; top: 0px; left: 0px; background-color: rgb(229, 227, 223);">
           <div class="gm-style" style="position: absolute; z-index: 0; left: 0px; top: 0px; height: 100%; width: 100%; padding: 0px; border-width: 0px; margin: 0px;">
@@ -334,7 +335,7 @@
                     <img class="cover rounded lazy lazy-loaded" src=""
                       data-srcset=""
                       sizes="433.984375px"
-                      srcset="">
+                      srcset="./imgs/marker-headshot.png">
                   </div>
                 </div>
               </div>
