updating matomo urls

--- a/heimy/index.html
+++ b/heimy/index.html
@@ -110,8 +110,8 @@
     _paq.push(['trackPageView']);
     _paq.push(['enableLinkTracking']);
     (function() {
-      var u="//207.154.195.91/";
-      _paq.push(['setTrackerUrl', u+'matomo.php']);
+      var u="http://207.154.195.91/";
+      _paq.push(['setTrackerUrl', u+'mtmo.php']);
       _paq.push(['setSiteId', '4']);
       var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
       g.type='text/javascript'; g.async=true; g.src=u+'mtmo.js'; s.parentNode.insertBefore(g,s);
