--- a/heimy/index.html
+++ b/heimy/index.html
@@ -110,7 +110,7 @@
     _paq.push(['trackPageView']);
     _paq.push(['enableLinkTracking']);
     (function() {
-      var u="http://207.154.195.91/";
+      var u="https://207.154.195.91/";
       _paq.push(['setTrackerUrl', u+'mtmo.php']);
       _paq.push(['setSiteId', '4']);
       var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
