--- a/heimy/index.html
+++ b/heimy/index.html
@@ -222,7 +222,7 @@
     <div class="map-bounds map-bounds--cover-landscape"></div>
     <div class="map-bounds map-bounds--spot"></div>
 
-    <div class="h-2/5 curate-grid curate-grid--gutter pad-bottom pad-top">
+    <div class="curate-grid curate-grid--gutter pad-bottom pad-top">
       <div class="s-col-12">
       <div class="title-tile w-full h-full pad-bottom pad-top rounded-xl">
         <div class="p-5 h-full grid">
@@ -262,7 +262,7 @@
                 ./imgs/heimy_hero4x.jpg 600w,
                 ./imgs/heimy_hero3x.jpg 400w,
                 ./imgs/heimy_hero2x.jpg 270w,
-                ./imgs/heimy_hero2x.jpg"
+                ./imgs/heimy_hero4x.jpg"
                 alt="" >
             </div>
 
@@ -287,19 +287,12 @@
                   <p>
                   </p>
                 </div>
-                <div class="gap-bottom" style="padding-bottom: 66.2568747978%">
-                  <img class="cover curated-rounded lazy lazy-loaded" src=""
-                    data-srcset=""
-                    sizes="433.984375px"
-                    srcset="./imgs/marker-headshot.png">
-                </div>
               </div>
             </div>
           </div>
         </div>
 
         </div>
-//search
       </div>
 
     <div class="s-wide-hide">
@@ -481,7 +474,7 @@
 
   var restaurants_json;
   getJsonRestaurants()
-    .then(result => restaurants_json = result)
+    .then(result => restaurants_json = result.splice(0,3))
     .then(() => $( "#search-input").keyup({param1: restaurants_json}, handleSearchEvent))
     .then(() => $( "#search-input").on("search", {param1: restaurants_json}, handleSearchEvent))
     .then(() => processJson(restaurants_json))
